feat: update document (#310)

--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -161,744 +161,23 @@ const sheetId = 'SheetId';
 univerAPI.executeCommand(SetWorksheetActiveOperation.id, { unitId: workbookId, subUnitId: sheetId });
 ```
 
-## Row
+## Core Features
 
-### insertRowAfter(afterPosition)
+### [Permission](/guides/sheet/features/core/permission)
 
-Inserts a row after the given row position.
+### [Formula](/guides/sheet/features/core/formula)
 
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
+### [Row and Column](/guides/sheet/features/core/row-column)
 
-// This inserts a row after the first row position
-sheet.insertRowAfter(0);
-```
+### [Range](/guides/sheet/features/core/range-selection#range)
 
-### insertRowBefore(beforePosition)
+### [Selection](/guides/sheet/features/core/range-selection#selection)
 
-Inserts a row before the given row position.
+### [Cell](/guides/sheet/features/core/range-selection#selection)
 
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This inserts a row before the first row position
-sheet.insertRowBefore(0);
-```
+### [Freeze](/guides/sheet/facade/freeze)
 
-### insertRows(rowIndex, numRows)
-
-Inserts one or more consecutive blank rows in a sheet starting at the specified location.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Shifts all rows down by three
-sheet.insertRows(0, 3);
-```
-
-### insertRowsAfter(afterPosition, howMany)
-
-Inserts a number of rows after the given row position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This inserts five rows after the first row
-sheet.insertRowsAfter(0, 5);
-```
-
-### insertRowsBefore(beforePosition, howMany)
-
-Inserts a number of rows before the given row position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This inserts five rows before the first row
-sheet.insertRowsBefore(0, 5);
-```
-
-### deleteRow(rowPosition)
-
-Deletes the row at the given row position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Rows start at "0" - this deletes the first row
-sheet.deleteRow(0);
-```
-
-### deleteRows(rowPosition, howMany)
-
-Deletes a number of rows starting at the given row position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Rows start at "0" - this deletes the first two rows
-sheet.deleteRows(0, 2);
-```
-
-### moveRows(rowSpec, destinationIndex)
-
-Moves the rows selected by the given range to the position indicated by the `destinationIndex`. The `rowSpec` itself does not have to exactly represent an entire row or group of rows to move—it selects all rows that the range spans.
-
-```typescript
-// The code below moves rows 1-2 to destination index 5
-// This results in those rows becoming rows 3-4
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Selects row 1 and row 2 to be moved
-const rowSpec = sheet.getRange(0,0,2,1);
-sheet.moveRows(rowSpec, 5);
-```
-
-### hideRow(row)
-
-Hides the rows in the given range.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This hides the first row
-const range = sheet.getRange(0,0,0,0);
-sheet.hideRow(range);
-```
-
-### hideRows(rowIndex, numRows)
-
-Hides one or more consecutive rows starting at the given index. Use 0-index for this method.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Hides the first three rows
-sheet.hideRows(0, 3);
-```
-
-### unhideRow(row)
-
-Unhides the row in the given range.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This unhides the first row if it was previously hidden
-const range = sheet.getRange(0,0,0,0);
-sheet.unhideRow(range);
-```
-
-### showRows(rowIndex, numRows)
-
-Unhides one or more consecutive rows starting at the given index. Use 0-index for this method.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Unhides the first three rows
-sheet.showRows(0, 3);
-```
-
-### setRowHeight(rowPosition, height)
-
-Sets the row height of the given row in pixels. By default, rows grow to fit cell contents. If you want to force rows to a specified height, use `setRowHeightsForced(startRow, numRows, height)`.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Sets the first row to a height of 200 pixels
-sheet.setRowHeight(0, 200);
-```
-
-### setRowHeights(startRow, numRows, height)
-
-Sets the height of the given rows in pixels. By default, rows grow to fit cell contents. If you want to force rows to a specified height, use `setRowHeightsForced(startRow, numRows, height)`.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Sets the first three rows to a height of 20 pixels
-sheet.setRowHeights(0, 3, 20);
-```
-
-### setRowHeightsForced(startRow, numRows, height)
-
-Sets the height of the given rows in pixels. By default, rows grow to fit cell contents. When you use `setRowHeightsForced`, rows are forced to the specified height even if the cell contents are taller than the row height.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Sets the first three rows to a height of 5 pixels
-sheet.setRowHeightsForced(0, 3, 5);
-```
-
-## Column
-
-### insertColumnAfter(afterPosition)
-
-Inserts a column after the given column position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This inserts a column after the first column position
-sheet.insertColumnAfter(0);
-```
-
-### insertColumnBefore(beforePosition)
-
-Inserts a column before the given column position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This inserts a column in the first column position
-sheet.insertColumnBefore(0);
-```
-
-### insertColumns(columnIndex, numColumns)
-
-Inserts one or more consecutive blank columns in a sheet starting at the specified location.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Shifts all columns by three
-sheet.insertColumns(0, 3);
-```
-
-### insertColumnsAfter(afterPosition, howMany)
-
-Inserts a given number of columns after the given column position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Inserts two columns after the first column
-sheet.insertColumnsAfter(0, 2);
-```
-
-### insertColumnsBefore(beforePosition, howMany)
-
-Inserts a number of columns before the given column position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This inserts five columns before the first column
-sheet.insertColumnsBefore(0, 5);
-```
-
-### deleteColumn(columnPosition)
-
-Deletes the column at the given column position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Columns start at "0" - this deletes the first column
-sheet.deleteColumn(0);
-```
-
-### deleteColumns(columnPosition, howMany)
-
-Deletes a number of columns starting at the given column position.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Columns start at "0" - this deletes the first two columns
-sheet.deleteColumns(0, 2);
-```
-
-### moveColumns(columnSpec, destinationIndex)
-
-Moves the columns selected by the given range to the position indicated by the `destinationIndex`. The `columnSpec` itself does not have to exactly represent an entire column or group of columns to move—it selects all columns that the range spans.
-
-```typescript
-// The code below moves rows A-B to destination index 5.
-// This results in those columns becoming columns C-D.
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Selects column A and column B to be moved.
-const columnSpec = sheet.getRange(0,0,1,2);
-sheet.moveColumns(columnSpec, 5);
-```
-
-### hideColumn(column)
-
-Hides the column or columns in the given range.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This hides the first column
-const range = sheet.getRange(0,0,0,0);
-sheet.hideColumn(range);
-```
-
-### hideColumns(columnIndex, numColumns)
-
-Hides one or more consecutive columns starting at the given index. Use 0-index for this method.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Hides the first three columns
-sheet.hideColumns(0, 3);
-```
-
-### unhideColumn(column)
-
-Unhides the column in the given range.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// This unhides the first column if it was previously hidden
-const range = sheet.getRange(0,0,0,0);
-sheet.unhideColumn(range);
-```
-
-### showColumns(columnIndex, numColumns)
-
-Unhides one or more consecutive columns starting at the given index. Use 0-index for this method.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Unhides the first three columns
-sheet.showColumns(0, 3);
-```
-
-### setColumnWidth(columnPosition, width)
-
-Sets the width of the given column in pixels.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Sets the first column to a width of 200 pixels
-sheet.setColumnWidth(0, 200);
-```
-
-### setColumnWidths(startColumn, numColumns, width)
-
-Sets the width of the given columns in pixels.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-  
-// Sets the first three columns to a width of 200 pixels
-sheet.setColumnWidths(0, 3, 200);
-```
-
-## Cell
-
-Cell data is stored in the worksheet as a two-dimensional Map, with the first and second indexes representing the row number and column number respectively.
-
-The following is a typical cell object:
-
-```typescript
-{
-  v: 'Hello, Univer',
-  s: 'styleId',
-  t: CellValueType.STRING
-}
-```
-
-For detailed field descriptions, please refer to [Configure Cell Data](/guides/sheet/getting-started/cell-data).
-
-<Callout type="info" emoji="ℹ️">
-  Cell operations can be regarded as operations on a range of rows and columns with a height of 1 and a width of 1. For the operation range, please refer to [Range](/guides/sheet/facade/sheet-api#range).
-</Callout>
-
-<Callout type="info" emoji="ℹ️">
-  The Univer API plugin will also store the extended cell attributes in the `resources` property of the `Workbook`, please refer to [Plugin Custom Model](/guides/customization/model/).
-</Callout>
-
-### Cell PointerMove
-
-The `onCellPointerMove` event is fired when a pointer changes coordinates.
-```typescript
-univerAPI.getSheetHooks().onCellPointerMove((cell) => {
-  // Get the cell currently pointed to by the mouse
-  console.log(cell);
-})
-```
-
-### Cell PointerOver
-
-The `onCellPointerOver` event is fired when a pointer is moved into a cell's hit test boundaries.
-```typescript
-univerAPI.getSheetHooks().onCellPointerOver((cell) => {
-  // Get the cell currently pointed to by the mouse
-  console.log(cell);
-})
-```
-
-### Cell DragOver
-
-The `onCellDragOver` event is fired when an element or text selection is being dragged into a cell's hit test boundaries.
-```typescript
-univerAPI.getSheetHooks().onCellDragOver((cell) => {
-  // Get the cell currently pointed to by the mouse
-  console.log(cell);
-})
-```
-
-### Cell Drop
-
-The `onCellDrop` event is fired when an element or text selection is being dropped on the cell.
-```typescript
-univerAPI.getSheetHooks().onCellDrop((cell) => {
-  // Get the cell currently pointed to by the mouse
-  console.log(cell);
-})
-```
-
-### Cell Enters Editing
-
-```typescript
-univerAPI.onCommandExecuted((command) => {
-  if(command.id === 'sheet.operation.set-cell-edit-visible' && command.params.visible){
-    console.log('Cell edit visible')
-  }
-})
-```
-
-### Cell Exits Editing
-
-```typescript
-univerAPI.onCommandExecuted((command) => {
-  if(command.id === 'sheet.operation.set-cell-edit-visible' && !command.params.visible){
-    console.log('Cell edit invisible')
-  }
-})
-```
-
-## Range
-
-A range refers to a rectangular area in a worksheet, determined by the starting row number, starting column number, length and width, or ending row number and ending column number.
-
-Most operations in a spreadsheet can be performed through the Range API, such as setting values, getting values, setting styles, getting styles, etc.
-
-### Create a Range
-
-To get a range you need to know the starting row number, starting column number, length and width.
-
-Create a range of A1 cell:
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 1, 1);
-```
-
-Creates a range of A1:B2:
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-```
-
-Starting from `0.2.15`, `getRange` supports using A1 notation to get ranges.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-// Get the A1:B2 range on named Sheet1
-const range1 = sheet.getRange('Sheet1!A1:B2');
-
-// Get a single cell A1
-const range2 = sheet.getRange('A1');
-
-// Get the A1:B2 range
-const range3 = sheet.getRange('A1:B2');
-
-// Get the range of column A
-const range4 = sheet.getRange('A:A');
-
-// Get the range of row 1
-const range5 = sheet.getRange('1:1');
-```
-
-### Get Range Data
-
-Get the value of the first cell in the range
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-const value = range.getValue();
-```
-
-Get all cell values in the range
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range.forEach(( row, column, cell) => {
-  console.log( row, column, cell);
-});
-```
-
-Get all formulas in the range
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-console.log(range.getFormulas());
-```
-
-### Set Range Value
-
-#### Set a single value
-
-If a value or cell object is passed in, all cells in the range will be overwritten. If it starts with `=`, it will be interpreted as a formula.
-
-For example, to set the value of A1:B2 to `Hello, Univer`:
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range.setValue('Hello, Univer');
-```
-
-Set the value of A1+B1 to the formula:
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range.setValue('=A1+B1');
-```
-
-Set the value of A1:B2 to the cell object:
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range.setValue({
-  v: 'Hello, Univer',
-  custom: {
-      key: 'value',
-  },
-});
-```
-
-#### Set multiple values with an array
-
-The length and width of the array must match the length and width of the range.
-
-You can pass in cell values or cell objects.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range.setValues([
-  ['A1', 'B1'],
-  ['A2', 'B2'],
-]);
-
-range.setValues([
-  [{ v: 'A1' }, { v: 'B1' }],
-  [{ v: 'A2' }, { v: 'B2' }],
-]);
-```
-
-#### Set multiple values with an object
-
-If an object is passed in, the primary index of the object represents the row number, and the secondary index represents the column number, and the length and width of the range do not need to match.
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range.setValues({
-  0: {
-    0: 'A1',
-    1: 'B1',
-  },
-  1: {
-    0: 'A2',
-    1: 'B2',
-  },
-});
-```
-
-### Get Range Style
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-const style = range.getCellStyleData();
-```
-
-### Set Range Style
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range
-  .setFontWeight('bold')
-  .setFontLine('underline')
-  .setFontFamily('Arial')
-  .setFontSize(24)
-  .setFontColor('red');
-```
-
-### Clear Range Style
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-range
-  .setFontWeight(null)
-  .setFontLine(null)
-  .setFontFamily(null)
-  .setFontSize(null)
-  .setFontColor(null);
-```
-
-### Whether the range is merged
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-const isMerged = range.isMerged();
-```
-
-### Get the coordinates of the range
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-const rect = range.getCellRect(); // width、heigh、left、right、top、bottom、x、y
-```
-
-### Get the merge information and coordinates of the range at the same time
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-const range = sheet.getRange(0, 0, 2, 2);
-const cell = range.getCell();
-```
-
-## Selection
-
-Univer Sheets support multiple constituencies, so a constituency is an array of ranges, and you can manipulate the constituency data through the range API.
-
-We also provide APIs to get the current selection, set the selection, and listen for changes to the selection.
-
-### Get Active Selection
-
-```typescript
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();\
-
-const selection = sheet.getSelection();
-const range = selection.getActiveRange();
-```
-
-### Set Selection
-
-Set A1:B2 as the selection
-
-```typescript
-import { SetSelectionsOperation } from '@univerjs/sheets'
-
-const sheetId = 'SheetId';
-univerAPI.executeCommand(SetSelectionsOperation.id, {
-  selections: [{
-    range: {
-      startRow: 0,
-      startColumn: 0,
-      endRow: 1,
-      endColumn: 1,
-      rangeType: 0,
-    },
-  }],
-  subUnitId,
-  unitId: activeWorkbook.getId(),
-  type: 2,
-})
-```
-
-### Listen for Selection Changes
-
-```typescript
-const activeWorkbook = univerAPI.getActiveWorkbook();
-activeWorkbook.onSelectionChange((selection) => {
-  console.log(selection);
-});
-```
-
-### Attach a popup to cell <VersionBadge version="0.2.10+" />
-
-```tsx
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-const range = sheet.getRange(0, 0, 10, 10); // A1:J10
-
-// attach popup to the first cell of range
-// if disposeable is null, it means that the popup is not added successfully
-const disposeable = range.attachPopup({
-  // componentKey must be a componet or a key of registered component 
-    componentKey: () => <div style={{ width: 100, height: 100, background: '#fff' }}>popup content</div>,
-    // if componentKey is a vue3 component, you must set isVue3 to true
-    // isVue3: true,
-});
-
-// remove the popup
-disposeable.dispose();
-```
-
-### Add float dom to sheet <VersionBadge version="0.2.10+" />
-
-[demo](https://stackblitz.com/edit/awesome-univer-sheets-vite-demo-fqsu99?file=package.json,src%2Fmain.tsx)
-
-1. Depends on `@univerjs/sheets-drawing-ui` plugin
-2. Needs to be called after univer rendering is completed
-3. `componentKey` must pass the registered component id or react/vue3 component. If it is vue3 component, it must be marked isVue3
-
-```tsx
-// add a float dom
-// if disposeable is null, it means that the float-dom is not added successfully
-const disposeable = worksheet.addFloatDomToPosition({
-    // componentKey must be a componet or a key of registered component 
-    componentKey: ({ data }) => (
-        <div style={{ width: '100%', height: '100%', background: '#fff' }}>
-            popup content
-            {data?.label}
-        </div>
-    ),
-    // if componentKey is a vue3 component, you must set isVue3 to true
-    // isVue3: true,
-    initPosition: {
-        startX: 100,
-        endX: 200,
-        startY: 100,
-        endY: 200,
-    },
-
-    // data of this component
-    data: {
-        label: 'hahah',
-    },
-});
-
-// remove the float dom
-disposeable.dispose();
-```
+### [Integrating Custom Components into Univer](/guides/sheet/facade/dom)
 
 ## Server-Related Features
 
@@ -906,7 +185,7 @@ disposeable.dispose();
 
 ### Import XLSX
 
-To import via API, use the [Server Version of the Facade API](/guides/sheet/facade/facade#use-with-the-univer-server) to call the features provided by the [import/export plugin](/guides/sheet/features/import-export). Make sure to include the necessary dependencies before use.
+To import via API, use the [Server Version of the Facade API](/guides/sheet/getting-started/facade#use-with-the-univer-server) to call the features provided by the [import/export plugin](/guides/sheet/features/import-export). Make sure to include the necessary dependencies before use.
 
 #### Import XLSX and Get `unitId`
 
@@ -930,7 +209,7 @@ univerAPI.importXLSXToSnapshot(file).then((data)=>{
 
 ### Export XLSX
 
-To export via API, use the [Server Version of the Facade API](/guides/sheet/facade/facade#use-with-the-univer-server) to call the features provided by the [import/export plugin](/guides/sheet/features/import-export). Make sure to include the necessary dependencies before use.
+To export via API, use the [Server Version of the Facade API](/guides/sheet/getting-started/facade#use-with-the-univer-server) to call the features provided by the [import/export plugin](/guides/sheet/features/import-export). Make sure to include the necessary dependencies before use.
 
 #### Export XLSX via `unitId`
 
